syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";
import "session.proto";

service Loop {
    // start the loop
    rpc LoopStart(LoopStartRequest) returns (google.protobuf.Empty);

    // stop the loop
    rpc LoopStop(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message serviceHosts {
    uint32 hostWhisper    = 1;
    uint32 hostStorage    = 2;
    uint32 hostClipboard  = 3;
    uint32 hostKeyboard   = 4;
    uint32 hostProcess    = 5;
    uint32 hostBrowser    = 6;
    uint32 hostFilesystem = 7;
    uint32 hostHover      = 8;
    uint32 hostWindow     = 9;
    uint32 hostCursor     = 10;  
}

message LoopStartRequest {
    Session session = 1;
    serviceHosts serviceHosts = 2;
}
